# manim_optics

./: .gitignore  LICENSE  README.md  __init__.py  optical_elements.py  pyproject.toml  rays.py  test_eye.py  test_graticule.py  test_mirror_display.py  test_mirror_extensions.py  test_show_main_line.py  test_virtual_detection.py
.claude/: settings.local.json
docs/: changelog.md  concepts.md  conf.py  index.md  installation.md  quickstart.md  requirements.txt
docs/api/: base.md  beam_stops.md  index.md  lenses.md  mirrors.md  miscellaneous.md  optics_3d.md  rays.md  scene_utils.md  systems.md
docs/autoapi/: index.rst
docs/autoapi/manim_optics/: index.rst
docs/autoapi/manim_optics/base/: index.rst
docs/autoapi/manim_optics/beam_stops/: index.rst
docs/autoapi/manim_optics/centered_system/: index.rst
docs/autoapi/manim_optics/eye/: index.rst
docs/autoapi/manim_optics/lenses/: index.rst
docs/autoapi/manim_optics/mirrors/: index.rst
docs/autoapi/manim_optics/miscellaneous/: index.rst
docs/autoapi/manim_optics/optics_3d/: index.rst
docs/autoapi/manim_optics/rays/: index.rst
docs/autoapi/manim_optics/real_lenses/: index.rst
docs/autoapi/manim_optics/scene_utils/: index.rst
example_gif/: render_examples.sh
examples/: all_2d_gallery.py  test_3d_scene.py  test_beam_stop_moving.py  test_boundary_custom.py  test_centered_animations.py  test_dynamic_3d.py  test_dynamic_optical_elements.py  test_focal_debug.py  test_graticule.py  test_mirror_display.py  test_mirror_extensions.py  test_ray_animations.py
examples/example_gif/: README.md  render_gallery.sh
manim_optics/: __init__.py  base.py  beam_stops.py  centered_system.py  eye.py  lenses.py  mirrors.py  miscellaneous.py  optical_elements.py  optical_elements.py.backup  optics_3d.py  rays.py  real_lenses.py  scene_utils.py
test/: test_3d_scene.py  test_arc_debug.py  test_beam_stop_moving.py  test_boundary_custom.py  test_centered_animations.py  test_centered_system.py  test_debug_centered.py  test_dynamic_3d.py  test_dynamic_optical_elements.py  test_eye.py  test_focal_3d.py  test_focal_debug.py  test_graticule.py  test_lens_tips.py  test_ray_animations.py  test_readme_examples.py  test_remanence_debug.py  test_show_main_line.py  test_smooth_transitions.py  test_trackers_3d.py  test_virtual_detection.py  test_y_offset.py
tests/: conftest.py  test_beam_stops.py  test_lenses.py  test_manim_objects.py  test_mirrors.py  test_miscellaneous.py  test_optics_3d.py  test_optics_math.py  test_rays.py  test_scene_utils.py  test_systems.py
