[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manim-optics"
version = "0.1.0"
description = "An optics simulation library built on top of Manim"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Corentin Nannini" }
]
keywords = ["manim", "optics", "physics", "animation", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Multimedia :: Graphics :: Animation",
]
dependencies = [
    "manim>=0.20.0",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

# Project URLs
[project.urls]
Homepage = "https://github.com/lordpositron/manim_optics"
Repository = "https://github.com/lordpositron/manim_optics.git"
"Bug Tracker" = "https://github.com/lordpositron/manim_optics/issues"

[tool.setuptools]
packages = ["manim_optics"]

# Ruff Configuration
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"